<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_header_general_minUpdateTime_default"
        android:inputType="number"
        android:key="minUpdateTime"
        android:title="@string/pref_header_general_minUpdateTime_title"
        android:summary="@string/pref_header_general_minUpdateTime_summary"
            />

    <EditTextPreference
        android:defaultValue="@string/pref_header_general_minDistance_default"
        android:inputType="number"
        android:key="minDistance"
        android:title="@string/pref_header_general_minDistance_title"
        android:summary="@string/pref_header_general_minDistance_summary"
        />

    <EditTextPreference
        android:defaultValue="@string/pref_header_general_warnAccuracyThreshold_default"
        android:inputType="number"
        android:key="warnAccuracyThreshold"
        android:title="@string/pref_header_general_warnAccuracyThreshold_title"
        android:summary="@string/pref_header_general_warnAccuracyThreshold_summary"
        />

    <EditTextPreference
        android:defaultValue="@string/pref_header_general_maxAccuracyThreshold_default"
        android:inputType="number"
        android:key="maxAccuracyThreshold"
        android:title="@string/pref_header_general_maxAccuracyThreshold_title"
        android:summary="@string/pref_header_general_maxAccuracyThreshold_summary"
        />

</PreferenceScreen>
